# SimpleEventLoop

./: CMakeLists.txt  README.md
include/: EventLoop.h  Service.h
src/: EventLoop.cpp  Service.cpp  main.cpp
